--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
     "    # 14. Clean the budget column in the wiki_movies_df DataFrame.\n",
     "    budget = wiki_movies_df['Budget'].dropna()\n",
     "    wiki_movies_df['budget'] = budget.str.extract(f'({form_one}|{form_two})', flags=re.IGNORECASE)[0].apply(parse_dollars)\n",
-    "    wiki_movies_df.drop('Budget', axis=1, inplace=True)\n",
+    "    \n",
     "    \n",
     "    # 15. Clean the release date column in the wiki_movies_df DataFrame.\n",
     "    release_date = wiki_movies_df['Release date'].dropna().apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
@@ -185,7 +185,7 @@
     "    date_form_four = r'\\d{4}'\n",
     "    release_date.str.extract(f'({date_form_one}|{date_form_two}|{date_form_three}|{date_form_four})', flags=re.IGNORECASE)\n",
     "    wiki_movies_df['release_date'] = pd.to_datetime(release_date.str.extract(f'({date_form_one}|{date_form_two}|{date_form_three}|{date_form_four})')[0], infer_datetime_format=True)\n",
-    "    wiki_movies_df.drop('Release date', axis=1, inplace=True)\n",
+    "    \n",
     "   \n",
     "    # 16. Clean the running time column in the wiki_movies_df DataFrame.\n",
     "    running_time = wiki_movies_df['Running time'].dropna().apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -291,9 +291,9 @@
        "      <th>Based on</th>\n",
        "      <th>Starring</th>\n",
        "      <th>Cinematography</th>\n",
+       "      <th>Release date</th>\n",
        "      <th>Country</th>\n",
        "      <th>Language</th>\n",
-       "      <th>Director</th>\n",
        "      <th>...</th>\n",
        "      <th>Editor(s)</th>\n",
        "      <th>Composer(s)</th>\n",
@@ -317,9 +317,9 @@
        "      <td>[Characters, by Rex Weiner]</td>\n",
        "      <td>[Andrew Dice Clay, Wayne Newton, Priscilla Pre...</td>\n",
        "      <td>Oliver Wood</td>\n",
+       "      <td>[July 11, 1990, (, 1990-07-11, )]</td>\n",
        "      <td>United States</td>\n",
        "      <td>English</td>\n",
-       "      <td>Renny Harlin</td>\n",
        "      <td>...</td>\n",
        "      <td>Michael Tronick</td>\n",
        "      <td>[Cliff Eidelman, Yello]</td>\n",
@@ -341,9 +341,9 @@
        "      <td>[the novel, After Dark, My Sweet, by, Jim Thom...</td>\n",
        "      <td>[Jason Patric, Rachel Ward, Bruce Dern, George...</td>\n",
        "      <td>Mark Plummer</td>\n",
+       "      <td>[May 17, 1990, (, 1990-05-17, ), (Cannes Film ...</td>\n",
        "      <td>United States</td>\n",
        "      <td>English</td>\n",
-       "      <td>James Foley</td>\n",
        "      <td>...</td>\n",
        "      <td>Howard E. Smith</td>\n",
        "      <td>Maurice Jarre</td>\n",
@@ -365,9 +365,9 @@
        "      <td>[Air America, by, Christopher Robbins]</td>\n",
        "      <td>[Mel Gibson, Robert Downey Jr., Nancy Travis, ...</td>\n",
        "      <td>Roger Deakins</td>\n",
+       "      <td>[August 10, 1990, (, 1990-08-10, )]</td>\n",
        "      <td>United States</td>\n",
        "      <td>[English, Lao]</td>\n",
-       "      <td>Roger Spottiswoode</td>\n",
        "      <td>...</td>\n",
        "      <td>[John Bloom, Lois Freeman-Fox]</td>\n",
        "      <td>Charles Gross</td>\n",
@@ -389,9 +389,9 @@
        "      <td>NaN</td>\n",
        "      <td>[Alec Baldwin, Blythe Danner, Judy Davis, Mia ...</td>\n",
        "      <td>Carlo Di Palma</td>\n",
+       "      <td>[December 25, 1990, (, 1990-12-25, )]</td>\n",
        "      <td>United States</td>\n",
        "      <td>English</td>\n",
-       "      <td>Woody Allen</td>\n",
        "      <td>...</td>\n",
        "      <td>Susan E. Morse</td>\n",
        "      <td>NaN</td>\n",
@@ -413,9 +413,9 @@
        "      <td>NaN</td>\n",
        "      <td>[Paul Hogan, Elias Koteas, Linda Kozlowski]</td>\n",
        "      <td>Russell Boyd</td>\n",
+       "      <td>December 19, 1990</td>\n",
        "      <td>US</td>\n",
        "      <td>English</td>\n",
-       "      <td>John Cornell</td>\n",
        "      <td>...</td>\n",
        "      <td>David Stiven</td>\n",
        "      <td>Maurice Jarre</td>\n",
@@ -430,7 +430,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
+       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -462,45 +462,45 @@
        "3  [Alec Baldwin, Blythe Danner, Judy Davis, Mia ...  Carlo Di Palma   \n",
        "4        [Paul Hogan, Elias Koteas, Linda Kozlowski]    Russell Boyd   \n",
        "\n",
-       "         Country        Language            Director  ...  \\\n",
-       "0  United States         English        Renny Harlin  ...   \n",
-       "1  United States         English         James Foley  ...   \n",
-       "2  United States  [English, Lao]  Roger Spottiswoode  ...   \n",
-       "3  United States         English         Woody Allen  ...   \n",
-       "4             US         English        John Cornell  ...   \n",
+       "                                        Release date        Country  \\\n",
+       "0                  [July 11, 1990, (, 1990-07-11, )]  United States   \n",
+       "1  [May 17, 1990, (, 1990-05-17, ), (Cannes Film ...  United States   \n",
+       "2                [August 10, 1990, (, 1990-08-10, )]  United States   \n",
+       "3              [December 25, 1990, (, 1990-12-25, )]  United States   \n",
+       "4                                  December 19, 1990             US   \n",
        "\n",
-       "                        Editor(s)              Composer(s)  \\\n",
-       "0                 Michael Tronick  [Cliff Eidelman, Yello]   \n",
-       "1                 Howard E. Smith            Maurice Jarre   \n",
-       "2  [John Bloom, Lois Freeman-Fox]            Charles Gross   \n",
-       "3                  Susan E. Morse                      NaN   \n",
-       "4                    David Stiven            Maurice Jarre   \n",
+       "         Language  ...                       Editor(s)  \\\n",
+       "0         English  ...                 Michael Tronick   \n",
+       "1         English  ...                 Howard E. Smith   \n",
+       "2  [English, Lao]  ...  [John Bloom, Lois Freeman-Fox]   \n",
+       "3         English  ...                  Susan E. Morse   \n",
+       "4         English  ...                    David Stiven   \n",
        "\n",
-       "                   Producer(s)                  Production company(s)  \\\n",
-       "0   [Steve Perry, Joel Silver]                        Silver Pictures   \n",
-       "1  [Ric Kidney, Robert Redlin]                        Avenue Pictures   \n",
-       "2               Daniel Melnick  [Carolco Pictures, IndieProd Company]   \n",
-       "3              Robert Greenhut                                    NaN   \n",
-       "4                 John Cornell                                    NaN   \n",
+       "               Composer(s)                  Producer(s)  \\\n",
+       "0  [Cliff Eidelman, Yello]   [Steve Perry, Joel Silver]   \n",
+       "1            Maurice Jarre  [Ric Kidney, Robert Redlin]   \n",
+       "2            Charles Gross               Daniel Melnick   \n",
+       "3                      NaN              Robert Greenhut   \n",
+       "4            Maurice Jarre                 John Cornell   \n",
        "\n",
-       "                      Writer(s)    imdb_id  box_office      budget  \\\n",
-       "0   [David Arnott, James Cappe]  tt0098987  21400000.0  20000000.0   \n",
-       "1  [James Foley, Robert Redlin]  tt0098994   2700000.0   6000000.0   \n",
-       "2    [John Eskow, Richard Rush]  tt0099005  57718089.0  35000000.0   \n",
-       "3                   Woody Allen  tt0099012   7331647.0  12000000.0   \n",
-       "4                    Paul Hogan  tt0099018   6939946.0  25000000.0   \n",
+       "                   Production company(s)                     Writer(s)  \\\n",
+       "0                        Silver Pictures   [David Arnott, James Cappe]   \n",
+       "1                        Avenue Pictures  [James Foley, Robert Redlin]   \n",
+       "2  [Carolco Pictures, IndieProd Company]    [John Eskow, Richard Rush]   \n",
+       "3                                    NaN                   Woody Allen   \n",
+       "4                                    NaN                    Paul Hogan   \n",
        "\n",
-       "   release_date running_time  \n",
-       "0    1990-07-11        102.0  \n",
-       "1    1990-05-17        114.0  \n",
-       "2    1990-08-10        113.0  \n",
-       "3    1990-12-25        106.0  \n",
-       "4    1990-12-19         95.0  \n",
+       "     imdb_id  box_office      budget release_date  running_time  \n",
+       "0  tt0098987  21400000.0  20000000.0   1990-07-11         102.0  \n",
+       "1  tt0098994   2700000.0   6000000.0   1990-05-17         114.0  \n",
+       "2  tt0099005  57718089.0  35000000.0   1990-08-10         113.0  \n",
+       "3  tt0099012   7331647.0  12000000.0   1990-12-25         106.0  \n",
+       "4  tt0099018   6939946.0  25000000.0   1990-12-19          95.0  \n",
        "\n",
-       "[5 rows x 21 columns]"
+       "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -525,8 +525,10 @@
        " 'Based on',\n",
        " 'Starring',\n",
        " 'Cinematography',\n",
+       " 'Release date',\n",
        " 'Country',\n",
        " 'Language',\n",
+       " 'Budget',\n",
        " 'Director',\n",
        " 'Distributor',\n",
        " 'Editor(s)',\n",
@@ -541,7 +543,7 @@
        " 'running_time']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
